# nautilus-quant-scaffold

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.cursor/plans/: 0dte_design_gap_analysis_e26e3a0e.plan.md  0dte_implementation_plan_5c4f2990.plan.md  codebase_mastery_curriculum_586f9e4f.plan.md  codebase_mastery_guide_87922ef6.plan.md
.cursor/rules/: agent.mdc  design-principles.mdc
.cursor/skills/backtest-worflow/: SKILL.md
.cursor/skills/data-pipeline-changes/: SKILL.md
.cursor/skills/quant-strategy-impl/: SKILL.md
.github/workflows/: ci.yml
config/: README.md  backtest.yaml  base.yaml  live.yaml  paper.yaml
config/strategies/: ema_cross_demo.yaml  ema_cross_slow.yaml  switcher_demo.yaml
config/suites/: ema_eval.yaml
configs/: base.yaml
configs/diversification/: default.yaml
configs/fees/: deribit_options.yaml  ib_options.yaml
configs/profiles/: backtest_btc.yaml  backtest_btc_multi.yaml  backtest_reference.yaml  backtest_spy.yaml  paper_btc.yaml  paper_spy.yaml
configs/risk/: conservative.yaml  default.yaml
configs/session/: crypto_deribit.yaml  us_equity.yaml
configs/strategies/: reference.yaml
configs/streaming/: default.yaml
docs/design/: README.md  class-diagram.puml  concurrency-activity.puml  data-model.puml  ingestion-tiers.md  sequence-diagram.puml  state-diagram.puml
docs/faq/: README.md
docs/implementation/: config-wiring.md  gate-boundary.md  learning-attribution.md  live-catalog-capture.md
scripts/: build_catalog_fixture.py  build_deribit_catalog_fixture.py
src/: README.md
src/analysis/: compare.py  metrics.py  runs.py
src/apps/backtester/: main.py  (+4 more)
src/core/: __init__.py  active_strategy.py  config.py  experiment.py  orchestrator.py  run_profile.py  secrets.py
src/data_pipeline/: bar_cache.py  bar_sources.py  catalog.py  data_window.py  instrument_resolver.py  loader.py  schemas.py  watermarks.py
src/models/: inference.py  jax_signal.py  loader.py  promotion.py  registry.py
src/nautilus_zerodte/: __init__.py
src/nt_ext/: factories.py
src/trade_baby_trade/: __init__.py
src/viz/: tearsheet.py
tests/: README.md
tests/fakes/: __init__.py  data.py  models.py  risk.py
tests/integration/: test_backtest_smoke.py  test_deribit_backtest.py  test_gate_backtest.py  test_ib_backtest.py  test_multi_strategy_backtest.py  test_reference_backtest.py  test_smoke_backtest.py  test_suite_backtest.py  test_watcher_cycle.py
tests/unit/: test_actors.py  test_adapters.py  test_bar_loader.py  test_compare.py  test_config.py  test_config_wiring.py  test_costs.py  test_data_pipeline.py  test_deribit_selector.py  test_experiment_steps.py  test_factory.py  test_gated_skeleton.py  test_gates.py  test_ib_costs.py  test_ib_selector.py  test_ingestion.py  test_journal.py  test_learning.py  test_live_node.py  test_metrics.py  test_model_loader.py  test_models.py  test_nt_ext.py  test_offline_research.py  test_orchestrator.py  test_promotion.py  test_reference_strategy.py  test_risk_rules.py  test_rl_env.py  test_run_profile.py  test_secrets.py  test_selector.py  test_streaming.py  test_switcher.py  test_watermarks.py
(+127 files in other folders)
