[project]
name = "trade-baby-trade"
version = "0.1.0"
description = "Personal trading project built on NautilusTrader."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nautilus-trader[deribit,ib]>=1.229.0a0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.7",
]

[project.scripts]
trade-baby-trade = "trade_baby_trade.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
nautilus-trader = { index = "nautech" }

[[tool.uv.index]]
name = "nautech"
url = "https://packages.nautechsystems.io/simple"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_baby_trade"]

[tool.hatch.build.targets.sdist]
include = ["src/trade_baby_trade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
